--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
   "dependencies": {
-    "debug": "^2.6.9",
-    "knox": "^0.9.2",
+    "knox-s3": "^0.9.5",
     "request": "^2.88.0"
   },
   "peerDependencies": {
@@ -24,15 +23,15 @@
     "chai": "^4.1.2",
     "coffee-script": "^1.12.7",
     "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.3.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.3",
     "hubot-test-helper": "^1.9.0",
     "husky": "^0.14.3",
     "matchdep": "^2.0.0",
     "mocha": "^5.2.0",
-    "nock": "^9.6.0",
-    "release-it": "^7.5.0",
+    "nock": "^9.6.1",
+    "release-it": "^7.6.0",
     "require-dir": "^1.0.0",
     "sinon": "^6.1.5",
     "sinon-chai": "^3.2.0",
