--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 notifications:
   email: false
 node_js:
-  - "12" # stable
+  - "13" # current
+  - "12" # LTS
   - "10" # LTS
-  - "8"  # maintenance
 cache:
   directories:
     - node_modules
