--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coffee-script": "^1.12.7",
-    "grunt": "^1.1.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-mocha-test": "^0.13.3",
     "hubot-test-helper": "^1.9.0",
     "husky": "^4.2.5",
     "matchdep": "^2.0.0",
-    "mocha": "^7.2.0",
-    "nock": "^12.0.3",
-    "release-it": "^13.6.2",
+    "mocha": "^8.0.1",
+    "nock": "^13.0.2",
+    "release-it": "^13.6.5",
     "require-dir": "^1.2.0",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
@@ -40,7 +36,7 @@
   "main": "index.coffee",
   "scripts": {
     "release": "release-it",
-    "test": "grunt test"
+    "test": "mocha --require coffee-script/register \"test/**/*.coffee\" --reporter spec"
   },
   "husky": {
     "hooks": {
